# ServerStatus

./: .gitignore  README.md  jsonreference.md  main.py  minecraftStatus.py  package-lock.json  pyproject.toml  requirements.txt  serverconfig.json  stats.py  terrariaStatus.py
api_backend/: main.py
frontend/statusfrontend/: .env  package-lock.json  package.json
frontend/statusfrontend/public/: index.html
frontend/statusfrontend/src/: App.js  Styles.css  admin.jsx  index.js  menu.js  stats.js
frontend/statusfrontend/src/components/: cpu-card.js  cpu-graph.js  disk-card.js  mc-card.js  mc-websocket.js  server-card.js  terraria-card.js
frontend/statusfrontend/src/data/: niceErrorNames.js
templates/: index.html
